--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head><title>Example web page</title></head>
  <body>
    <h1>Hello, World</h1>
+   <marquee> Hello <marquee>
    <p>
      Welcome to my web page.  This
      web page is a demonstration of
