--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
      web page is a demonstration of
      HTML.
    </p>
-  <img src="/husky.JPG" alt="Dog Picture">
+  <img src="/husky.jpg" alt="Dog Picture">
  </body>
 </html>
