--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
      web page is a demonstration of
      HTML.
    </p>
-  <img src="/husky.jpg" alt="Dog Picture">
+  <img src="/https://Derekcs1.github.io/test_webpage/husky.jpg" alt="Dog">
  </body>
 </html>
